fix(stylesheets): stretch from compass

--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -5,12 +5,13 @@ $icon-font-path: 'http://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/';
 
 body { padding-top: 70px; }
 
-@mixin stretch($top, $right, $bottom, $left) {
+// https://github.com/chriseppstein/compass/blob/stable/frameworks/compass/stylesheets/compass/layout/_stretching.scss
+@mixin stretch($offset-top:0, $offset-right:0, $offset-bottom:0, $offset-left:0) {
   position: absolute;
-  top: $top;
-  right: $right;
-  bottom: $bottom;
-  left: $left;
+  @if $offset-top { top: $offset-top; }
+  @if $offset-bottom { bottom: $offset-bottom; }
+  @if $offset-left { left: $offset-left; }
+  @if $offset-right { right: $offset-right; }
 }
 
 @font-face {
